--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -12,7 +12,8 @@ jobs:
       contents: write
     
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout código
+        uses: actions/checkout@v3
         with:
           persist-credentials: false
           fetch-depth: 0
@@ -24,7 +25,7 @@ jobs:
           
       - name: Commit cambios
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add update.txt
           git commit -m "Auto Commit: $(date '+%Y-%m-%d')"
